@startuml
class ToDoListApp {
    start()
}

class DataOps {
    ToDoList toDoList
    String currentPath
    getInstance()
    ArrayList<ListItem> getItems()
    ToDoList readDataFile(File file)
    writeDataToFile(File file)
}

class ToDoController {
    newList()
    loadList(File file)
    saveList(File file)
    newListOnClick()
    loadListOnClick()
    saveListOnClick()
    newListOnClick()
    onlyCompleteOnClick()
    onlyIncompleteOnClick()
    refreshListView(onlyComplete, onlyIncomplete)
    helpDialog()
    simpleDialog(String title, String header, String defaultString)
}

class ToDoListListCell {
    updateItem(ListItem item, boolean empty)
    markComplete()
    editDetails(String description, String date)
    deleteItem()
    editDetailsOnClick()
    deleteItemOnClick()
}

class ToDoList {
    String title
    ArrayList<ListItem> items
    addItem(ListItem item)
}

class ListItem {
    String description
    String date
    boolean complete
    setDescription()
    setDate()
    setComplete()
}

ToDoList <-- ListItem
ToDoController <-- ToDoListListCell
ToDoListApp <-- ToDoController
@enduml